miniextendr-macros/tests/ui/derive_dataframe_struct_field_width.stderr
error: `width` is only valid on `Vec<T>`, `Box<[T]>`, or `&[T]` fields
  --> tests/ui/derive_dataframe_struct_field_width.rs:15:13
   |
15 |     origin: Point,
   |             ^^^^^

warning: unexpected `cfg` condition value: `rayon`
 --> tests/ui/derive_dataframe_struct_field_width.rs:5:10
  |
5 | #[derive(DataFrameRow)]
  |          ^^^^^^^^^^^^
  |
  = note: expected values for `feature` are: `default-coerce`, `default-r6`, `default-s7`, `default-strict`, `default-worker`, `doc-lint`, and `vctrs`
  = note: using a cfg inside a derive macro will use the cfgs from the destination crate and not the ones from the defining crate
  = help: try referring to `DataFrameRow` crate for guidance on how handle this unexpected cfg
  = help: the derive macro `DataFrameRow` may come from an old version of the `miniextendr_macros` crate, try updating your dependency with `cargo update -p miniextendr_macros`
  = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
  = note: `#[warn(unexpected_cfgs)]` on by default
  = note: this warning originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Point: IntoList` is not satisfied
 --> tests/ui/derive_dataframe_struct_field_width.rs:6:8
  |
6 | struct Point {
  |        ^^^^^ unsatisfied trait bound
  |
help: the trait `IntoList` is not implemented for `Point`
 --> tests/ui/derive_dataframe_struct_field_width.rs:6:1
  |
6 | struct Point {
  | ^^^^^^^^^^^^
  = help: the following other types implement trait `IntoList`:
            BTreeMap<K, V>
            BTreeSet<T>
            HashMap<K, V>
            HashSet<T>
            Vec<T>
note: required by a bound in `_check`
 --> tests/ui/derive_dataframe_struct_field_width.rs:5:10
  |
5 | #[derive(DataFrameRow)]
  |          ^^^^^^^^^^^^ required by this bound in `_check`
  = note: this error originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)
